add extra JPMS open flags for Java 9 and up (#894)